# nfclib

source/: CMakeLists.txt  main.c
source/nfclib/: buildoptions.h  debug.h  defines.h  nfclib.h
source/nfclib/debug/: debug.c
source/nfclib/nfc/: communication.h  nfcOpenClose.c  nfcTransceive.c
source/nfclib/nfc/transport/: transport.c  transport.h  uart.c  uart.h
